// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<tbody>
  <tr
    className="activity-graph-tooltip-line"
  >
    <td
      className="activity-graph-tooltip-value text-right spacer-right thin"
      colSpan={2}
    >
      10,245.0%
    </td>
    <td>
      metric.duplicated_lines_density.name
    </td>
  </tr>
</tbody>
`;

exports[`should render correctly: with separator 1`] = `
<tbody>
  <tr>
    <td
      className="activity-graph-tooltip-separator"
      colSpan={3}
    >
      <hr />
    </td>
  </tr>
  <tr
    className="activity-graph-tooltip-line"
  >
    <td
      className="activity-graph-tooltip-value text-right spacer-right thin"
      colSpan={2}
    >
      10,245.0%
    </td>
    <td>
      metric.duplicated_lines_density.name
    </td>
  </tr>
</tbody>
`;
